[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lift-tracker"
version = "0.1.0"
description = "A FastAPI backend for tracking and analyzing strength training progress"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lift_tracker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
